[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2"]

[project]
name = "inventree-digikey-supplier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["digikey-api-v4", "django<6.0"]

[project.entry-points."inventree_plugins"]
inventree-digikey-supplier = "inventree_digikey_supplier:DigikeySupplierPlugin"

[tool.uv.sources]
digikey-api-v4 = {git = "https://github.com/Gigahawk/digikey-api-v4"}
